--- a/flutter/gym_app/package.json
+++ b/flutter/gym_app/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
-    "@openzeppelin/contracts": "^4.9.3"
+    "@openzeppelin/contracts": "^4.9.3",
+    "truffle": "^5.11.5"
   }
 }
