--- a/flutter/gym_app/pubspec.yaml
+++ b/flutter/gym_app/pubspec.yaml
@@ -31,6 +31,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  provider: ^6.0.2
+  http: ^0.13.4
+  web_socket_channel: ^2.1.0
+  dart_web3: ^0.0.3
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -60,10 +64,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
+  assets:
+    - assets/artifacts/contracts/
+    
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
